--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "tsafe": "^1.0.1",
     "typescript": "^5.0.2",
     "wsrun": "^5.2.4",
-    "yarn-deduplicate": "^3.1.0",
-    "yarn-run-all": "^3.1.1"
+    "yarn-deduplicate": "^3.1.0"
   },
   "lint-staged": {
     "**/*.{ts, tsx}": "eslint --fix",
