--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "husky": "^7.0.0",
     "jest": "^26.6.3",
     "lint-staged": ">=10",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.6",
     "prompts": "^2.4.2",
     "ts-jest": "^26.5.4",
     "tsafe": "^1.0.1",
     "typescript": "^5.7.2",
-    "wsrun": "^5.2.4",
-    "yarn-run-all": "^3.1.1"
+    "wsrun": "^5.2.4"
   },
   "lint-staged": {
     "**/*.{ts, tsx}": "eslint --fix",
