--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -8,7 +8,7 @@
     "type-check": "tsc --noEmit",
     "test": "jest --coverage --forceExit",
     "bundle": "esbuild src/server.ts --bundle --minify --outfile=dist/index.js  --platform=node --external:aws-sdk --external:@aws-sdk",
-    "watch": "ts-node-dev --respawn local/index.ts",
+    "watch": "tsx watch local/index.ts",
     "build": "run-p --print-label type-check bundle"
   },
   "devDependencies": {
@@ -21,8 +21,7 @@
     "@types/jest": "^29.2.3",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^1.0.0"
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@codegenie/serverless-express": "^4.16.0",
