--- a/users-refresher-lambda/package.json
+++ b/users-refresher-lambda/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "bundle": "esbuild src/index.ts --bundle --minify --outfile=dist/index.js  --platform=node --external:aws-sdk --external:@aws-sdk",
-    "watch": "ts-node-dev --respawn run.ts",
+    "watch": "tsx watch run.ts",
     "build": "run-p --print-label type-check bundle",
     "test": "jest 2>&1"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.299.0",
-    "@types/iniparser": "^0.0.29",
-    "ts-node-dev": "^1.0.0"
+    "@types/iniparser": "^0.0.29"
   },
   "dependencies": {
     "@googleapis/admin": "9.0.1",
